master: changes on concepts

--- a/src/main/java/org/sa/concepts/topics/businessAndWorkplace.properties
+++ b/src/main/java/org/sa/concepts/topics/businessAndWorkplace.properties
@@ -13,9 +13,9 @@ RBAC=role based access control - system of user access rights based on their rol
 gateway\ team=protecting network by managing security, access, and their incidents.
 CI=Configuration Item - any component that needs to be managed in order to deliver an IT service.
 ubiquitous\ language=shared, common, used by both domain experts and developers to describe and discuss the domain model.
-PR=public release.
+PR=can mean public release, pull request, public relations.
 postmortem=structured analysis that takes place after a failure has occurred.
-Liferay=content management system (CMS). Pre-made, highly customisable website for enterprise. Covers backend and frontend.
+Liferay=content management system (CMS). Pre-made, highly customisable website for enterprise. Backend and frontend.
 streamline=remove obstacles and add improvements to optimize.
 CTO=Chief Technology Officer - executive responsible for overseeing technological development and innovation.
 MLM=Multi-Level Marketing - strategy where salespeople earn from personal sales and sales made by their recruits.
