--- a/src/main/java/org/sa/concepts/topics/containerisation.properties
+++ b/src/main/java/org/sa/concepts/topics/containerisation.properties
@@ -2,11 +2,11 @@ Andromeda=Application Development Platform - supports the development, deploymen
 base\ Java\ Docker\ image=serves as the foundation for running Java applications within a Docker container. Provides the foundational environment and Java runtime for running Java applications within a container.
 cloud=services over the internet, such as storage, processing power, databases, networking, software, and analytics. Instead of relying on local devices.
 cluster=all nodes.
-container=isolated software package that contains everything needed to run an application\: code, dependencies, libraries, and system settings. is a running instance of image.
+container=isolated software package that contains everything needed to run an application: code, dependencies, libraries, and system settings. is a running instance of image.
 container\ image=executable package that includes everything needed to run a piece of software, including the code, runtime, libraries, and system tools.
 container\ management\ platform=software system - manages the deployment, scaling, and orchestration of containers across a cluster.
 container\ runtime=software component - executes the processes within individual containers and provide isolation between them.
-DC=datacenter - building to house computer systems. includes\: telecommunications, storage systems, backup power supplies, redundant data communications connections, etc.
+DC=datacenter - building to house computer systems. includes: telecommunications, storage systems, backup power supplies, redundant data communications connections, etc.
 Docker=container runtime.
 endpoint=specific address or location in a network where communication or data transfer can occur.
 garbage\ collection=is an automated process that identifies and frees up memory.
