--- a/src/main/java/org/sa/concepts/topics/frontend.properties
+++ b/src/main/java/org/sa/concepts/topics/frontend.properties
@@ -11,7 +11,7 @@ overlay=(web) - graphical element that is superimposed on top of another element
 asynchronous=each next task starts without previous one ending. Task become concurrent.
 SwiftUI=user interface framework developed by Apple for building apps across iOS, macOS, watchOS, and tvOS.
 landing\ page=entry point for a particular section of a website. Prompts a specific action from visitors, such as making a purchase, signing up for a newsletter, downloading a resource, or filling out a form.
-CHROMIUM=base upon which many modern web browsers are built.
+Chromium=base upon which many modern web browsers are built.
 web=WWW - content over the internet. Including platform and protocols.
 web\ container=servlet container or servlet engine - component of a server that manages the execution of servlets and Java Server Pages (JSP).
 web\ portal=platform - provides access to services.
