--- a/src/main/java/org/sa/concepts/topics/algorithmsCodingAndStructures.properties
+++ b/src/main/java/org/sa/concepts/topics/algorithmsCodingAndStructures.properties
@@ -35,4 +35,5 @@ dispose\ of\ a\ list=release the list and its resources.
 dispose\ of\ memory=free up or release memory
 justified\ vs\ excusable=justified focuses on positives despite downsides; excusable tolerates known flaws.
 heap=ordered data structure, in Java implemented as PriorityQueue. Good for efficient sorting.
-deque=double-ended queue, allows insertion and removal from both ends. In Java implemented as ArrayDeque;
+deque=double-ended queue, allows insertion and removal from both ends. In Java implemented as ArrayDeque.
+parity=state of being even or odd.
