master: concept trie

--- a/src/main/java/org/sa/concepts/topics/algorithmsCodingAndStructures.properties
+++ b/src/main/java/org/sa/concepts/topics/algorithmsCodingAndStructures.properties
@@ -37,3 +37,4 @@ justified\ vs\ excusable=justified focuses on positives despite downsides; excus
 heap=ordered data structure, in Java implemented as PriorityQueue. Good for efficient sorting.
 deque=double-ended queue, allows insertion and removal from both ends. In Java implemented as ArrayDeque.
 parity=state of being even or odd.
+trie=tree storing words by letters, good for fast prefix search. Pronounced like “try” (/traɪ/).
