--- a/src/main/java/org/sa/concepts/topics/workUsefulEnglish.properties
+++ b/src/main/java/org/sa/concepts/topics/workUsefulEnglish.properties
@@ -3,7 +3,7 @@ allocate\ a\ list=short for allocate memory for a list
 assess=evaluate/ estimate quality of
 commissioning=bring (something newly produced, such as a factory or machine) into working condition. "we had a few hiccups getting the heating equipment commissioned"
 comply=meet specific standards
-credential=information, proof of the identity or authorization of an entity (such as a user or a system).Include\: username and password, API keys, certificates, tokens, biometric data.
+credential=information, proof of the identity or authorization of an entity (such as a user or a system).Include: username and password, API keys, certificates, tokens, biometric data.
 credibility=quality of being trusted
 diligence=careful or persistent work
 dispose=remove, or free up a resource
