master: managed concepts

--- a/src/main/java/org/sa/concepts/topics/businessAndWorkplace.properties
+++ b/src/main/java/org/sa/concepts/topics/businessAndWorkplace.properties
@@ -12,7 +12,7 @@ product\ backlog\ (agile)=prioritized list of features and tasks in agile projec
 RBAC=role based access control - system of user access rights based on their role within an organization.
 gateway\ team=protecting network by managing security, access, and their incidents.
 CI=Configuration Item - any component that needs to be managed in order to deliver an IT service.
-ubiquitous\ language=shared, common, used by both domain experts and developers to describe and discuss the domain model.
+ubiquitous\ language=shared, common, used by both domain experts and developers to describe the domain model.
 PR=can mean public release, pull request, public relations.
 postmortem=structured analysis that takes place after a failure has occurred.
 Liferay=content management system (CMS). Pre-made, highly customisable website for enterprise. Backend and frontend.
