--- a/src/main/java/org/sa/concepts/topics/ciCdAndDevOps.properties
+++ b/src/main/java/org/sa/concepts/topics/ciCdAndDevOps.properties
@@ -1,5 +1,5 @@
 DevOps=practices, principles, philosophies on automation of the process of software delivery and infrastructure changes.
-DevSecOps=practice of integrating security seamlessly into every phase of the software development and delivery pipeline.
+DevSecOps=practice of integrating security into every phase of the software development and delivery pipeline.
 Jenkins=app for automating tasks like code integration, testing, and deployment. Written in Java.
 pipeline=process of building, testing and deploying. Often associated with automatisation.
 build=entire preparation for execution - compiling files, linking libraries, and packaging into a distributable format.
