--- a/src/main/java/org/sa/concepts/topics/containerisation.properties
+++ b/src/main/java/org/sa/concepts/topics/containerisation.properties
@@ -1,22 +1,26 @@
-Andromeda=Application Development Platform - supports the development, deployment, and operation of cloud-native applications.
-base\ Java\ Docker\ image=serves as the foundation for running Java applications within a Docker container. Provides the foundational environment and Java runtime for running Java applications within a container.
-cloud=services over the internet, such as storage, processing power, databases, networking, software, and analytics. Instead of relying on local devices.
+Andromeda=app development platform also for deployment and operation of cloud-native applications. Runs on OpenShift.
+base\ Java\ Docker\ image=foundation image with Java runtime for running apps in containers.
+cloud=internet-based services like storage, compute, databases—no local hardware needed.
 cluster=all nodes.
-container=isolated software package that contains everything needed to run an application: code, dependencies, libraries, and system settings. is a running instance of image.
-container\ image=executable package that includes everything needed to run a piece of software, including the code, runtime, libraries, and system tools.
-container\ management\ platform=software system - manages the deployment, scaling, and orchestration of containers across a cluster.
-container\ runtime=software component - executes the processes within individual containers and provide isolation between them.
-DC=datacenter - building to house computer systems. includes: telecommunications, storage systems, backup power supplies, redundant data communications connections, etc.
+container=isolated unit with app code, dependencies, and settings.
+container\ instance=running version of an image.
+container\ image=package with code, runtime, libs, tools—ready to run.
+container\ management\ platform=software system for deploying, scaling, and orchestrating containers across cluster.
+container\ runtime=software component that runs and isolates container processes.
+DC=data center — building housing IT systems.
+DC\ components=includes telecommunications, storage, backup power, redundant connections, cooling, etc.
 Docker=container runtime.
 endpoint=specific address or location in a network where communication or data transfer can occur.
 garbage\ collection=is an automated process that identifies and frees up memory.
-Haselcast=software to distribute data and computing load over nodes. Provides parallel processing and in-memory data grid.
-Helm=package manager for Kubernetes - setts up and manages applications - uses pre-configured packages containing all the necessary resources\: services, deployments, and configuration files, needed to run a specific application.
-Helm\ chart=package / set of files. Organized into a directory structure. Often reference container images as part of their configurations.
-how\ does\ Andromeda\ relate\ to\ OpenShift\ and\ Kubernetes?=Andromeda is a part of OpenShift, which is built on Kubernetes. Andromeda runs applications inside containers that are deployed in a Kubernetes cluster.
-how\ does\ OpenShift\ relate\ to\ Kubernetes?=OpenShift is built on top of Kubernetes, extending its capabilities with additional features.
-IMDG=An in-memory data grid - distributed computing technology that stores and manages data in RAM memory.
-is\ Rancher\ a\ container\ orchestration\ platform?\ =not a container orchestration platform itself, but it is a management platform for container orchestration and Kubernetes. Provides a user-friendly interface and tools for deploying, configuring.
+Hazelcast=software distributing data and compute over nodes; offers parallel processing and in-memory data grid.
+IMDG=in-memory data grid - distributed computing technology that stores and manages data in RAM memory; fast access.
+Helm=package manager for Kubernetes - sets up and manages applications using Helm charts.
+Helm\ chart=packages containing: container images, services, deployments, and configuration files.
+package=set of files or resources bundled for software deployment.
+Andromeda\ container\ deployment=Andromeda runs applications inside containers deployed in a Kubernetes cluster.
+OpenShift\ vs\ Kubernetes?=OpenShift is built on top of Kubernetes, extending its capabilities with additional features.
+Rancher\ platform=management platform for container orchestration and Kubernetes.
+Rancher\ features=provides user-friendly interface and tools for deployment and configuration.
 Kubernetes=container orchestration platform.
 managed\ services=subset of services that focus on ongoing management, maintenance, and support.
 managed\ services\ of\ Andromeda=Containers, monitoring, logging, traceability, caching, etc.
@@ -25,7 +29,7 @@ microservice=independent part of application for a specific function.
 NFS=Network File System - for accessing files over a network as if they were on a local file system.
 namespace\ (1)=In networking, namespaces can refer to isolated environments where different systems or applications can have their own unique identifiers without conflicting with others.
 namespace\ (2)=way to divide cluster resources between multiple users (or multiple projects or teams) on a single cluster. Within a namespace, you can have pods, services, deployments, and other resources.
-OpenShift=container orchestration platform - automates the development, deployment, and management of containerized applications.
+OpenShift=container orchestration platform - automates the development, deployment, and management of containerized applications. Built on Kubernetes.
 PV=Persistent Volume - storage resource that exists independently of a container. Managed by administrator/ platform.
 PVC=Persistent Volume Claim - request for PV storage by a user.
 pod=smallest deployable unit. It can hold one or more containers.
