--- a/src/main/java/org/sa/concepts/topics/backend.properties
+++ b/src/main/java/org/sa/concepts/topics/backend.properties
@@ -1,9 +1,9 @@
-Kafka\ (1)=a platform orchestrating data flow
+Kafka\ (1)=platform orchestrating data flow
 Kafka\ (2)=distributed event streaming platform for high-throughput, fault-tolerant data pipelines.
-Kafka\ (3)=a platform orchestrating real-time, asynchronous communication between services, ensuring scalable, reliable data flow and event logging.
 Kafka\ vs\ Kubernetes=Kafka orchestrates data streams; Kubernetes orchestrates container management.
-data\ flow=movement and transformation of data within backend systems, focusing on ingestion, processing, and distribution.
+data\ flow=data moves and changes through ingestion, processing, and output in backend systems.
 throughput=rate at which data is processed or transmitted through a system, measured in units/events per interval.
 Microsoft\ Azure=cloud computing platform.
 real-time\ data\ flow=continuous, asynchronous transfer and processing of data as events occur
-sticky\ session=ensures a user's requests are routed to the same server (no need to transfer copies of session data, Java classes don’t need serialization).
+sticky\ session=user always routed to same server for session consistency.
+sticky\ session\ benefit=avoids session data transfer and Java object serialization.
