master: containerisation concepts

--- a/src/main/java/org/sa/concepts/topics/containerisation.properties
+++ b/src/main/java/org/sa/concepts/topics/containerisation.properties
@@ -27,20 +27,21 @@ managed\ services\ of\ Andromeda=Containers, monitoring, logging, traceability, 
 master\ node=responsible for managing the overall cluster state.
 microservice=independent part of application for a specific function.
 NFS=Network File System - for accessing files over a network as if they were on a local file system.
-namespace\ (1)=In networking, namespaces can refer to isolated environments where different systems or applications can have their own unique identifiers without conflicting with others.
-namespace\ (2)=way to divide cluster resources between multiple users (or multiple projects or teams) on a single cluster. Within a namespace, you can have pods, services, deployments, and other resources.
-OpenShift=container orchestration platform - automates the development, deployment, and management of containerized applications. Built on Kubernetes.
+namespace\ (networking)=isolated environment where systems or apps has unique identifiers without conflicting others.
+namespace\ (cluster)=divides cluster resources (pods, services, deployments) among projects or teams.
+OpenShift=platform for container orchestration, automation, development, deployment, management; built on Kubernetes.
 PV=Persistent Volume - storage resource that exists independently of a container. Managed by administrator/ platform.
 PVC=Persistent Volume Claim - request for PV storage by a user.
 pod=smallest deployable unit. It can hold one or more containers.
 port=communication endpoint.
-Rancher=container management platform - manages workloads, deploys, scales containerized applications. Uses container runtime Kubernetes (Docker or other). Sets it's clusters.
-runtime=1. environment providing the necessary components to execute an app. 2. period during which a program is executing.
-SSH=Secure Shell key - pair of cryptographic keys (public and private) - used to authenticate and secure communication over a network.
+runtime=environment providing components to execute an app (or period when a program is executing).
+SSH=Secure Shell key pair (public/private) – authenticates and secures network communication.
 throttling=intentional limitation or control of certain resources, actions, or processes within an app or a system.
-worker\ node=computing node dedicated to running the containerized applications, has its own CPU, memory, and other resources.
+worker\ node=computing node for running the containerized applications, has its own CPU, memory, and other resources.
 YAML=(YAML Ain't Markup Language) - is a human-readable data serialization format. Like XML or JSON.
-secret=kubernetes resource to store sensitive data as a key value pair in etcd. secrets can be read by cluster admins, namespace admins, users with RBAC permissions
+secret\ (Kubernetes)=resource storing sensitive data as key-value pairs in etcd.
+secret\ access\ (Kubernetes)=readable by admins or users with RBAC permissions.
+RBAC=Role-Based Access Control — restricts system access based on user roles.
 F5=advanced load balancer and application traffic controller.
 F5\ rules=logic to control service traffic (access, balance and security)
 etcd=configuration data shared among nodes in a distributed system.
