master: managed concepts

--- a/src/main/java/org/sa/concepts/topics/databases.properties
+++ b/src/main/java/org/sa/concepts/topics/databases.properties
@@ -1,11 +1,15 @@
-CTE\ (1)=Common Test Environment.
-CTE\ (2)=Common Table Expression - result set of a query which exists temporarily and for use only within the context of a larger query.
-core=marks that database is main. But in our case there are only core databases so it's a bit meaningless, e.g. "test_lt_core".
+CTE\ (SQL)=Common Table Expression - temporary result set in a larger query.
 DBA=database administrators.
-NOT\ IN\ (sql)=operator, !=
+NOT\ IN\ (SQL)=operator, similar to "!=" (not equals)
 partition\ and\ sample=part of database table.
 RDBMS=relational database management system.
-JPQL=Java Persistence Query Language - interacts with databases in a platform-independent way. Automatic translation to actual SQL query depending on platform. Used with JPA.
-Hibernate=ORM framework for the Java - forerunner of JPA.
-ORM=Object-Relational Mapping - interaction between a database and OOP. database operations are performed using objects and classes rather than raw SQL queries. E.g.: Hibernate for Java.
+JPQL=Java Persistence Query Language - platform-independent database queries (get auto-translated to specific SQL).
+JPA=Java Persistence API - standard for managing relational data in Java apps, mapping objects to database tables.
+JPA\ scope=API covering queries, object mapping, transactions, and entity management.
+object\ mapping\ (database)=linking app objects to database tables for storage/retrieval.
+database\ transactions=group of DB actions done as one, all succeed or fail together.
+entity\ management=managing app data objects in DB: create, update, delete.
+entity\ (database)=object stored in database, represents data record.
+Hibernate=ORM framework for the Java - predecessor of JPA.
+ORM=Object-Relational Mapping - framework for object mapping e.g. Hibernate.
 DAO=Data Access Object - object with custom CRUD methods to interact with database.
