--- a/src/main/java/org/sa/concepts/topics/domainDrivenDesign.properties
+++ b/src/main/java/org/sa/concepts/topics/domainDrivenDesign.properties
@@ -1,8 +1,20 @@
-example\ of\ a\ semantic\ registration\ message\ (JSON)=Raw Data: Includes fields such as userId, username, email, registrationDate, and status; Metadata\: Includes contextual information like registrationSource, referralCode, and ipAddress, as well as the verification status.
-example\ of\ bounded\ contexts=an e-commerce system with User Management (user registration, authentication, profile management), Order Processing (orders, payments, order statuses), and Inventory Management (stock levels, suppliers, product information).
-example\ of\ good\ cohesion\ but\ poor\ separation\ of\ concerns=A DocumentManager class with methods for createDocument, formatDocument, and saveDocument demonstrates good cohesion (all methods are related to document management) but poor separation of concerns (handles multiple unrelated aspects of document handling).
-example\ of\ good\ separation\ of\ concerns\ for\ a\ DocumentManager\ class=A DocumentManager class that only manages high-level operations like createDocument and manageDocumentLifecycle, while delegating detailed tasks like document creation to a DocumentFactory, formatting to a Formatter, and saving to a StorageService.
-domain=business area, e.g., retail, banking, finance, healthcare.
+semantic\ registration\ message=JSON structure for user signup. Includes raw data and metadata.
+signup\ raw\ data=core data fields: userId, username, email, registration date, status.
+signup\ metadata=contextual info: registrationSource, referralCode, ipAddress, verification status.
+bounded=distinct business area, isolated from other contexts, distinct contextual meaning, independent evolution.
 bounded\ context=software unit with consistent terms, e.g., order processing in retail, payments in finance.
+bounded\ context\ example\ -\ user\ management=user registration, authentication, profile management.
+bounded\ context\ example\ -\ order\ processing=orders, payments, order statuses.
+bounded\ context\ example\ -\ inventory\ management=stock levels, suppliers, product information.
+separation\ of\ concerns\ (DDD)=dividing system into distinct parts, each handling a specific responsibility.
+good\ separation\ of\ concerns\ (DDD)=clear, distinct parts with minimal overlap or dependencies.
+bad\ separation\ of\ concerns\ (DDD)=overlapping responsibilities causing tight coupling and confusion.
+cohesion\ (DDD)=degree to which elements in a module belong together.
+good\ cohesion\ (DDD)=module elements focused on a single purpose, easy to maintain.
+bad\ cohesion\ (DDD)=module elements unrelated, causing complexity and confusion.
+good\ cohesion\ for\ DocManager=methods for creation, formatting, or saving, all related to doc handling.
+poor\ separation\ of\ concerns\ for\ DocManager=creation, formatting, saving, notifications, mixing responsibilities.
+good\ separation\ of\ concerns\ for\ DocManager=only doc creation; formatting and notifications are in separate classes.
+domain=business area, e.g., retail, banking, finance, healthcare.
 domain\ vs\ bounded\ context=domain usually contains multiple bounded contexts.
 domain\ model=conceptual design of business logic and rules, implemented by software units like microservices.
