--- a/src/main/java/org/sa/concepts/topics/frontend.properties
+++ b/src/main/java/org/sa/concepts/topics/frontend.properties
@@ -1,17 +1,17 @@
 UI\ dialog=secondary window used to display information or prompt user action.
 modal\ window=UI element that blocks interaction with the rest of the interface until closed.
+overlay\ (web)=UI element layered above others, may be modal (blocks underlying UI) or just provide extra content.
 FDP=frontend development platform (example: React).
 synchronous=each next task starts when previous one ends.
-JSON=JavaScript Object Notation - is a text-based data format representing objects, used for easy data exchange between systems.
+JSON=JavaScript Object Notation - text-based data format representing objects; for easy data exchange between systems.
 JSX=JavaScript as XML - is an HTML-like syntax used in React to create UI elements.
-JWT=JSON Web Token - compact, URL-safe token format used to securely encode, verify, and transmit information between parties, commonly for authentication and authorization purposes.
+JWT=JSON Web Token - compact, URL-safe token format commonly used for authentication and authorization purposes.
 URL\ safe\ format=avoids special characters, making data suitable for transmission in URLs.
 token=secure, encoded string used to represent authentication, authorization, or session information digitally.
-overlay=(web) - graphical element that is superimposed on top of another elements, typically to display additional content or provide a focused interaction area.
 asynchronous=each next task starts without previous one ending. Task become concurrent.
 SwiftUI=user interface framework developed by Apple for building apps across iOS, macOS, watchOS, and tvOS.
-landing\ page=entry point for a particular section of a website. Prompts a specific action from visitors, such as making a purchase, signing up for a newsletter, downloading a resource, or filling out a form.
+landing\ page=entry point for a particular section of a website. Prompts a specific action like  purchase or signing up.
 Chromium=base upon which many modern web browsers are built.
 web=WWW - content over the internet. Including platform and protocols.
-web\ container=servlet container or servlet engine - component of a server that manages the execution of servlets and Java Server Pages (JSP).
+web\ container=server component managing servlets and Java Server Pages (JSP) execution.
 web\ portal=platform - provides access to services.
