--- a/src/main/java/org/sa/concepts/topics/qaAndTesting.properties
+++ b/src/main/java/org/sa/concepts/topics/qaAndTesting.properties
@@ -37,3 +37,4 @@ unit\ testing=Testing individual units of code in isolation (AKA component testi
 usability\ testing=evaluates user-friendliness and overall user experience.
 XSS=Cross-Site Scripting — security flaw allowing attackers to inject malicious scripts into web pages viewed by users.
 performance\ testing=Testing the performance and scalability of a software application under various conditions.
+CTE\ (sandbox)=Common Test Environment.
