--- a/src/main/java/org/sa/concepts/topics/generalITTerms.properties
+++ b/src/main/java/org/sa/concepts/topics/generalITTerms.properties
@@ -1,14 +1,14 @@
 dispatcher=system or person that ensures efficiency by distributing resources, tasks, and information.
-bounded=having specific business areas and functions (distinct from other contexts), isolation (no direct impact on other contexts), contextual meaning (terms and concepts are unambiguous only within the context), and autonomy (independent evolution and management).
 interface=an intermediate between user and internal functionality; serves as both abstraction and boundary.
 credential=username, password, or token, used to authenticate and authorize a user.
-metadata=describes various aspects of data, such as its format, source, purpose, quality, and relationships with other data.
+metadata=data about data: format, source, purpose, quality, relationships with other data.
 hub=central point, where things are executed.
 framework=reusable and extensible structure that helps building applications.
 AD=architecture description.
 cross\ architecture=making sure components fit well: front, back, data, infrastructure and security
 SSO=Single Sign-On - authentication method for accessing multiple apps with one login.
 detrimental=causing harm, e.g. "Memory leaks are detrimental to performance."
-infer=deduce info from evidence, not explicit statements. Java example: in "var x = stream.toList()", x is inferred as a List.
+infer=deduce info from evidence. Java example: in "var x = stream.toList()", x is inferred as a List.
 deduce=conclude
-ICT\ system=Information and Communication Technology setup including hardware, software, networks, and people for data handling and communication.
+ICT\ system=Information and Communication Technology setup for data handling and communication.
+ICT\ system\ components=hardware, software, networks, and people.
