master: changes in concepts

--- a/src/main/java/org/sa/concepts/topics/databases.properties
+++ b/src/main/java/org/sa/concepts/topics/databases.properties
@@ -13,3 +13,4 @@ entity\ (database)=object stored in database, represents data record.
 Hibernate=ORM framework for the Java - predecessor of JPA.
 ORM=Object-Relational Mapping - framework for object mapping e.g. Hibernate.
 DAO=Data Access Object - object with custom CRUD methods to interact with database.
+JDBC=Java Database Connectivity - Java API for executing SQL in relational databases.
