--- a/src/main/java/org/sa/concepts/topics/javaAndSpring.properties
+++ b/src/main/java/org/sa/concepts/topics/javaAndSpring.properties
@@ -5,16 +5,16 @@ Spring\ beans=POJOs configured in the application context.
 Spring\ boot=part of Spring (Java framework) specific for creating web app back end.
 Bean\ factory/\ Application\ context=dependency injection container in Spring.
 what\ is\ stereotype\ in\ Spring=role of class, marked by annotation. E.g.: @Controller @Service
-JDBC=Java Database Connectivity - Java-based API that provides a standard interface for connecting to relational databases and executing SQL queries.
-JSP=Java Server Pages - allows Java code directly within HTML pages. Provides tags for iteration, conditionals, and formatting.
+JSP=Java Server Pages - embed Java code in HTML, with tags for loops, conditions, formatting.
 IoC=Inversion of Control - design principle where object creation and lifecycle are managed by a container or framework.
-.war\ file=Web Application Archive - packaging format used for distributing and deploying web applications in the Java ecosystem. Similar to .jar file.
+.war\ file=Web Application Archive - deployable Java web app package, similar to .jar.
 jar\ hell=conflicts between Java Archive (JAR) versions in projects with multiple dependencies.
 servlet\ container=handles multithreading and lifecycle of servlets. Examples: Jetty, Apache Tomcat.
 servlet/controller/MVC=Model View Controller - handles user input, process it, and update the model or view.
 component\ scanning=method of configuration: annotations added to classes, attributes, and methods. Helps defining bean.
-aspect\ oriented\ programming=way to separate functionality. Example: logging specific method can be triggered from separate class.
+aspect\ oriented\ programming=separates shared functionality like logging specific methods from separate log class.
+aspect=class handling shared concerns like logging or security.
 present()=method in FluentLenium that checks if the element is present in the DOM.
-POJO=Plain Old Java Object - Java class that does not extend or implement any specialized classes or interfaces from frameworks or libraries.
-abstract class=class that both shows what methods the extending classes have to implement and can implement some shared code.
-pointcut=rule defined in the aspect method's annotation. When an external method is executed, the aspect method gets executed as well.
+POJO=Plain Old Java Object - simple Java class without framework inheritance or interfaces.
+abstract\ class=both shows what methods the extending classes have to implement and can implement some shared code.
+pointcut=rule defined in aspect method's annotation. As external method is executed, aspect method gets executed too.
