master: all concepts are now up to length standard which is about <=121 characters

--- a/src/main/java/org/sa/concepts/topics/logsAndObservability.properties
+++ b/src/main/java/org/sa/concepts/topics/logsAndObservability.properties
@@ -1,10 +1,10 @@
-distributed\ computing=interconnected computers that work as a single system. Computers/nodes are in different locations and communicate with each other over a network.
-ELK=is an acronym that stands for Elasticsearch, Logstash, and Kibana.
+distributed\ computing=computers in different locations working together as one system over a network.
+ELK=Elasticsearch, Logstash, and Kibana - tools for searching, analyzing, and visualizing logs and data.
 Elasticsearch=search and analytics engine. Handles and analyzes large volumes of data in real-time.
-Full-text\ search=searching technique. Scores matching. Understands synonyms. Ignores overly common terms. Reduces words to stems: runner -> run.
+full-text\ search=search technique that scores matches, understands synonyms, and reduces words to stems.
 Kibana=log and data visualization and exploration tool. Used in conjunction with OpenShift (or other).
 Logread=our system where logs are being stored in files.
 Logstash=data processing pipeline. Ingests, transforms, and enriches data. Often used for logs.
 Loki=log aggregation system and time-series database that is part of the Grafana.
-Stop\ Word\ Filtering=ignoring frequently occurring, non-informative words (e.g., "the," "and") to enhance search efficiency and relevance.
+stop\ word\ filtering=ignoring frequently occurring, non-informative words (e.g., "the," "and") to improve search.
 observability=monitoring system health via logs, metrics, and traces for real-time insights.
