--- a/src/main/java/org/sa/concepts/topics/networking.properties
+++ b/src/main/java/org/sa/concepts/topics/networking.properties
@@ -1,9 +1,10 @@
-firewall\ opening=configuration change to allow specific traffic through the firewall, enabling communication over a given port or IP range.
-firewall=network security system that monitors and controls incoming and outgoing network traffic based on predetermined rules.
-DNS=Domain Name System - maps user - friendly domain names to numeric IP addresses.
-VPN=Virtual Private Network - encrypted and tunneled connection to trusted remote server, where your identity is hidden, but all the data in the internet accessed.
-VPN\ Whitelisting=a security measure that allows only specific IP addresses or devices to access a service through a VPN.
-Subnet=subnetwork - segment of a larger network. Subnetting improves network performance, security, and organization.
+firewall\ opening=configuration that allows specific traffic through the firewall on designated ports or IP ranges.
+firewall=network security system that monitors and controls inc-and-out network traffic based on predetermined rules.
+DNS=Domain Name System - maps user-friendly domain names to numeric IP addresses.
+VPN=Virtual Private Network - encrypted connection to a remote server, hiding identity while accessing the internet.
+VPN\ whitelisting=security measure that allows only specific IP addresses or devices to access a service through a VPN.
+subnet=subnetwork - segment of a larger network. Subnetting improves network performance, security, and organization.
 Wireshark=app for network troubleshooting.
-SSL\ (1)=Secure Sockets Layer - standard security protocol that encrypts the communication between a web server and a browser to protect sensitive information.
-SSL\ (2)=Secure Sockets Layer - protects communication over a network or internet. Encrypts the data between browser and website server. Successor - Transport Layer Security - TLS.
+connection\ protection=encryption, authentication, integrity checks, access control,  key exchange.
+SSL=Secure Sockets Layer - encryption of browser-server communication; predecessor to TLS.
+TLS=Transport Layer Security - - encryption of browser-server communication; successor to SSL.
