--- a/src/main/java/org/sa/concepts/topics/workUsefulEnglish.properties
+++ b/src/main/java/org/sa/concepts/topics/workUsefulEnglish.properties
@@ -1,9 +1,11 @@
 allocate=reserve a specific amount of any resource, so it's available when needed
 allocate\ a\ list=short for allocate memory for a list
 assess=evaluate/ estimate quality of
-commissioning=bring (something newly produced, such as a factory or machine) into working condition. "we had a few hiccups getting the heating equipment commissioned"
+commissioning=bring (something newly produced, such as a factory or machine) into working condition.
+commissioning\ example="we had a few hiccups getting the heating equipment commissioned"
 comply=meet specific standards
-credential=information, proof of the identity or authorization of an entity (such as a user or a system).Include: username and password, API keys, certificates, tokens, biometric data.
+credential=information, proof of the identity or authorization of an entity (such as a user or a system).
+credential\ examples=username, password, API keys, certificates, tokens, biometric data.
 credibility=quality of being trusted
 diligence=careful or persistent work
 dispose=remove, or free up a resource
@@ -11,7 +13,8 @@ due=adequate
 due\ diligence=proper level of investigation, analysis, and verification - (due - proper) + (diligence - care)
 e.g.=exampli gratia - example, for sake of
 enhanced=strengthened
-exponent=a quantity representing the power to which a given number or expression is to be raised. in 3^2, 2 is an exponent. 3 is a base.
+exponent\ (math)=power a number is raised to, e.g. 2 in 3^2
+base\ (math)=number raised to a power, e.g. 3 in 3^2
 facilitate\ meeting=organize meeting
 facility=building
 fetch=go, get it and bring it back
