master: managed concepts

--- a/src/main/java/org/sa/concepts/dictionary/generalEnglishToDefinitions.properties
+++ b/src/main/java/org/sa/concepts/dictionary/generalEnglishToDefinitions.properties
@@ -15,3 +15,5 @@ trivial\ solutions=favor the simplest solutions over overcomplicated designs or 
 veneer=thin layer of material applied over another to provide a decorative or protective finish.
 infer=draw a conclusion based on known information.
 heap=pile
+hectic=chaotic, rushed, intense; e.g., "hectic workday".
+outline=summary or main points of a topic; e.g., "outline of a project".
