--- a/src/main/java/org/sa/concepts/topics-swed/businessStar.properties
+++ b/src/main/java/org/sa/concepts/topics-swed/businessStar.properties
@@ -4,7 +4,7 @@ authorized\ signatory=a person who can handle the company's banking matters at t
 CIM=customer interaction management.
 CRM=customer relationship management.
 channels=mediums for communication.
-Emergency\ release=if the release is called REL240, after it emergency release might be done. It would be called REL240.1. Changes would be tested by the team who needs them implemented.
+emergency\ release=if the release is called REL240, after it emergency release might be done. It would be called REL240.1. Changes would be tested by the team who needs them implemented.
 IB=internet bank.
 JETTY=Java-based web server and servlet container. Can be embedded within app, allowing to serve web content directly without the web server.
 LDAP\ rights=Lightweight Directory Access Protocol - protocol which is used to reach STAR portlets.
