--- a/src/main/java/org/sa/concepts/topics/businessAndWorkplace.properties
+++ b/src/main/java/org/sa/concepts/topics/businessAndWorkplace.properties
@@ -19,6 +19,7 @@ Liferay=content management system (CMS). Pre-made, highly customisable website f
 streamline=remove obstacles and add improvements to optimize.
 CTO=Chief Technology Officer - executive responsible for overseeing technological development and innovation.
 MLM=Multi-Level Marketing - strategy where salespeople earn from personal sales and sales made by their recruits.
+Genesys\ Cloud=cloud-based contact-center app for personalized phone, email, chat, text, and social support.
 
 
 
