--- a/src/main/java/org/sa/concepts/topics/generalITTerms.properties
+++ b/src/main/java/org/sa/concepts/topics/generalITTerms.properties
@@ -12,3 +12,4 @@ infer=deduce info from evidence. Java example: in "var x = stream.toList()", x i
 deduce=conclude
 ICT\ system=Information and Communication Technology setup for data handling and communication.
 ICT\ system\ components=hardware, software, networks, and people.
+HSM=Hardware Security Module — device for cryptographic key protection.
