master: implemented answer/input of idk

--- a/src/main/java/org/sa/concepts/topics/networking.properties
+++ b/src/main/java/org/sa/concepts/topics/networking.properties
@@ -5,6 +5,6 @@ VPN=Virtual Private Network - encrypted connection to a remote server, hiding id
 VPN\ whitelisting=security measure that allows only specific IP addresses or devices to access a service through a VPN.
 subnet=subnetwork - segment of a larger network. Subnetting improves network performance, security, and organization.
 Wireshark=app for network troubleshooting.
-connection\ protection=encryption, authentication, integrity checks, access control,  key exchange.
+connection\ protection\ (examples)=encryption, authentication, integrity checks, access control,  key exchange.
 SSL=Secure Sockets Layer - encryption of browser-server communication; predecessor to TLS.
 TLS=Transport Layer Security - - encryption of browser-server communication; successor to SSL.
