--- a/src/main/java/org/sa/score/score.properties
+++ b/src/main/java/org/sa/score/score.properties
@@ -1,5 +1,6 @@
 #Concept key to score (1 for correct, -1 for wrong)
-#Tue May 27 01:41:13 EEST 2025
+#Tue May 27 10:23:04 EEST 2025
+connection\ protection\ (examples)=-6
 encapsulation=1
 heap=-4
 namespace\ (networking)=1
