--- a/src/main/java/org/sa/concepts/topics-swed/esealing.properties
+++ b/src/main/java/org/sa/concepts/topics-swed/esealing.properties
@@ -1,5 +1,5 @@
-E-archive=stores documents. Works on Rancher 2.
+E-archive=stores documents. Works on Andromeda.
+Signature\ Container\ Service=adds e-seals to documents. Works on Andromeda.
 E-seal=a proof that the document has integrity (not tampered).
-ESealing\ narrative=tellers use the STAR application to upload the prepared documents and add e-seals to them. Users access these documents through iBank.
+ESealing\ narrative=tellers upload preped docs and add e-seals to them on STAR. Users access these docs through iBank.
 Seal\ Service=sorts and groups documents. Works on Andromeda.
-Signature\ Container\ Service=adds e-seals to documents. Works on Rancher 2.
