--- a/src/main/java/org/sa/concepts/topics/backend.properties
+++ b/src/main/java/org/sa/concepts/topics/backend.properties
@@ -1,9 +1,13 @@
-Kafka\ (1)=platform orchestrating data flow
-Kafka\ (2)=distributed event streaming platform for high-throughput, fault-tolerant data pipelines.
+Kafka\ (1/2)=platform orchestrating data flow
+Kafka\ (2/2)=distributed event streaming platform for high-throughput, fault-tolerant data pipelines.
 Kafka\ vs\ Kubernetes=Kafka orchestrates data streams; Kubernetes orchestrates container management.
 data\ flow=data moves and changes through ingestion, processing, and output in backend systems.
 throughput=rate at which data is processed or transmitted through a system, measured in units/events per interval.
-Microsoft\ Azure=cloud computing platform.
 real-time\ data\ flow=continuous, asynchronous transfer and processing of data as events occur
 sticky\ session=user always routed to same server for session consistency.
 sticky\ session\ benefit=avoids session data transfer and Java object serialization.
+AWS=Amazon cloud platform for scalable computing, storage, and services.
+Azure=Microsoft cloud platform for apps, data, and services.
+Google\ Cloud=Google cloud platform for hosting, data, and AI.
+cloud\ platform=online infrastructure for hosting apps, data, and services.
+on-premises\ datacenter=organization-owned data center on-site, unlike cloud or third-party hosting.
