--- a/src/main/java/org/sa/concepts/topics-swed/swedbank.properties
+++ b/src/main/java/org/sa/concepts/topics-swed/swedbank.properties
@@ -15,3 +15,5 @@ VDE=value delivery engine - agile combination of teams, that has a common goal. 
 VTE=Virtual Test Environment - custom testing environment used by certain teams.
 CC1, CC2, CC3, CC4=Criticality categories classifying IT services by importance and compliance impact.
 core=marks that database is main. But in our case there are only core databases so it's a bit meaningless.
+Enigma=internal service to sign and encrypt data. Stores encryption keys in HSM.
+HSM=Hardware Security Module - specialised computer device that stores and manages cryptographic keys.
