--- a/src/main/java/org/sa/concepts/topics/generalITTerms.properties
+++ b/src/main/java/org/sa/concepts/topics/generalITTerms.properties
@@ -4,7 +4,7 @@ credential=username, password, or token, used to authenticate and authorize a us
 metadata=data about data: format, source, purpose, quality, relationships with other data.
 hub=central point, where things are executed.
 framework=reusable and extensible structure that helps building applications.
-AD=architecture description.
+AD=architecture description or active directory (access rights).
 cross\ architecture=making sure components fit well: front, back, data, infrastructure and security
 SSO=Single Sign-On - authentication method for accessing multiple apps with one login.
 detrimental=causing harm, e.g. "Memory leaks are detrimental to performance."
