--- a/src/main/java/org/sa/concepts/topics-swed/swedbank.properties
+++ b/src/main/java/org/sa/concepts/topics-swed/swedbank.properties
@@ -1,14 +1,17 @@
 CTE=common test environment.
-CasC=CI/CD team's tool for encrypting. For onboarding to OpenShift it encrypts: service account credentials and config files.
-conversational\ banking=services provided through AI-driven chat messages - personal support, transactions and access to services.
+CasC=CI/CD team tool to encrypt service account credentials and config files for OpenShift onboarding.
+AI chat-based banking services: support, transactions, and service access.
 ECD=Entreprise Continuous Delivery (team).
 ICDEV=was a custom development environment used by ICD team, but it is no longer in use.
 incidents=tickets needed to be solved regarding issues. Our team gets assigned ticked regarding problems of STAR.
-Karoo=an external tool - a system overseeing the customer call display in the branch. It interacts with a STAR database to check when the AB was registered.
+Karoo=external tool managing branch customer call display, checking AB registration in STAR database.
 L&P=team: Lifecycle and Performance.
 LMI=Log Management and Intelligence (LMI) - platform, where logs are stored long term.
 omni-channel=experience of transitioning interconnected channels seamlessly and with consistent experience.
-PartyMDM=centralized Party Master Data Management solution used in Swedbank Baltic. Developed by Baltic Customer Data Domain team.
+PartyMDM=central Party Master Data Management solution in Baltics, developed by Baltic Customer Data Domain team.
+party=an entity involved in a transaction or relationship. example: customer, vendor, partner.
+party\ master\ data=key info about customers, partners within an organization.
+master\ (data)=central, authoritative source of info.
 SGW=Swedbank Gate Way (team).
 TIDY\ project=making sure data is being managed according to regulations.
 VDE=value delivery engine - agile combination of teams, that has a common goal. Has PI meeting every 10 weeks. Can be large group - VDE1 - "train". And can be medium group - VDE2 - "tram".
