master: concepts added

--- a/src/main/java/org/sa/concepts/topics-swed/swedbank.properties
+++ b/src/main/java/org/sa/concepts/topics-swed/swedbank.properties
@@ -14,7 +14,7 @@ party\ master\ data=key info about customers, partners within an organization.
 master\ (data)=central, authoritative source of info.
 SGW=Swedbank Gate Way (team).
 TIDY\ project=making sure data is being managed according to regulations.
-VDE=value delivery engine - agile combination of teams, that has a common goal. Has PI meeting every 10 weeks. Can be large group - VDE1 - "train". And can be medium group - VDE2 - "tram".
+VDE=value delivery engine — multiple agile teams with shared goal, having PI meeting every 10 weeks.
 VTE=Virtual Test Environment - custom testing environment used by certain teams.
 CC1, CC2, CC3, CC4=Criticality categories classifying IT services by importance and compliance impact.
 core=marks that database is main. But in our case there are only core databases so it's a bit meaningless.
