--- a/src/main/java/org/sa/concepts/topics/ciCdAndDevOps.properties
+++ b/src/main/java/org/sa/concepts/topics/ciCdAndDevOps.properties
@@ -14,3 +14,8 @@ GitHub\ repository\ access\ HTTPS\ vs\ SSH=HTTPS uses username/password, SSH use
 roll\ out=deployment and activation of a new product or feature for use.
 heap\ space=memory area during program execution, for storing objects.
 memory\ lack\ in\ Jenkins=due to large builds, extensive test suites, or insufficient memory allocation in JVM settings.
+artifactory=stores built artifacts (JAR, WAR, binaries), not source code.
+artifact=built file produced by a build process, like a JAR, WAR, or binary, ready for deployment or distribution.
+.war\ file=Web Application Archive - containing app, packaged and, ready for deployment.
+Ivy=dependency management tool for Java, automates retrieving libraries and modules during build or deployment.
+Ivy\ integration\ to\ Gradle=Gradle plugin for Ivy repos, allows using Ivy modules and dependencies in Gradle builds.
