--- a/src/main/java/org/sa/concepts/topics/regulations.properties
+++ b/src/main/java/org/sa/concepts/topics/regulations.properties
@@ -14,7 +14,7 @@ TDC=test data compliance - test data meets standards and regulations.
 GCT=general compliance testing - testing processes to meet standards and regulations.
 DGOM=Data Governance Operating Model — roles, policies, and processes ensuring data quality, security and compliance.
 customer\ data\ domain=centralized focus on managing customer data across all systems.
-data\ governance=management of data quality, security, and accessibility through defined roles, rules, and processes.
+Data\ governance=management of data quality, security, and accessibility through defined roles, rules, and processes.
 custody=legal responsibility for care or control.
 data\ custodian=person/team managing data storage, security, and maintenance.
 ECB - Europien Central Bank
